fixed alignment of header and contact sections when flex boxes wrap

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -40,7 +40,7 @@ h2::after {
     border-bottom:1px solid #777;
 }
 
-@media screen and (max-width:980px) {
+@media screen and (max-width:631px) {
     .contact img {
         display:block;
         margin-left:auto;
@@ -48,15 +48,24 @@ h2::after {
     }
 }
 
+@media screen and (max-width:543px) {
+    .header h1, .nav {
+        display:block;
+        margin-left:auto;
+        margin-right:auto;
+    }
+ }
+
 /* ---------- header ---------- */
 .header {
     border:1px solid green;
     display:flex;
     flex-wrap:wrap;
-    justify-content:space-evenly;
+    justify-content:space-between;
     align-items:baseline;
     margin:0px 20px;
     column-gap:20px;
+    min-width:
 }
 
 .header h1 {
